Compass-1040: Sidebar Styles Fix (#952)
* charts draggable field drop hover styles

* new sidebar component styles

* remove scrollbar when sidebar collapsed

--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -18,13 +18,13 @@
     text-overflow: ellipsis;
 
     &-over {
-      border-color: @chart1;
+      border-color: @green2;
       background: white;
-      box-shadow: 0 0 6px 0 rgba(67,177,229, .6);
+      box-shadow: 0 0 6px 0 rgba(107,164,66, .6);
     }
 
     &-can-drop {
-      border-color: @chart6;
+      border-color: @chart1;
       background: white;
       box-shadow: 0 0 6px 0 rgba(67,177,229, .6);
     }
